# casa-jxl-wasm-wrapper

./: .flipflop-ds0-out.txt  .gitattributes  .gitignore  .gitmodules  0_Tests_Skills_Harnesses.md  AGENTS.md  CLAUDE.md  Cargo.toml  CrawlBot2000Findings.md  EpicCodeReview - DONE.md  EpicCodeReview - jxl-pyramid - DOING.md  EpicCodeReview - jxl-pyramid.md  EpicCodeReview-20260617T203437Z - DOING.md  EpicCodeReview-20260619T093126Z.md  EpicCodeReview-20260619T124908Z.md  EpicCodeReview-20260619T130214Z.md  EpicCodeReview-20260619T130329Z.md  EpicCodeReview-20260619T194416Z.md  EpicCodeReview-20260619T195435Z.md  EpicCodeReview-20260619T203606Z.md  EpicCodeReview-20260621T085149Z.md  EpicCodeReview-20260622T113415Z.md  EpicCodeReview.md  EpicCodeReviewNew - DONE.md  EpicCodeReviewSummary - DONE.md  EpicCodeReview_DeferredItems_Handoff.md  FLIPFLOP_C7_DOWNSCALE_RECIPROCAL_RESULTS.md  FableSuggestions.md  GraphAggregateResults.inline.js  HANDOFF.md  HighPerformancePyramidTiledIngestion - DONE.md  JXLWASM-Scheduler.md  Key files.md  OPTIMIZATION_SUMMARY.md  Opus4.8MaxInvestigation - DONE.md  Opus4.8MaxInvestigation.md  Overview and features of the CasaWASM JXL wrapper.md  PLAYWRIGHT-NOTES.md  PerPixelMathEvolutionPlan - DONE.md  QUESTIONS.md  (+87 more)
.cargo/: config.toml
.flipflop/: README.md
benchmark/: README.md  README_TELEMETRY.md  TELEMETRY_INTEGRATION.md  TELEMETRY_INTEGRATION_EXAMPLES.md  _progressive-stream-helper.mjs  analyze-matrix.mjs  analyze-policy-matrix.mjs  benchmark-history-conversion.mjs  benchmark-history-conversion.test.mjs  benchmark-history-registry.mjs  butteraugli-gamma-lut.mjs  butteraugli-smoke-test.mjs  correlation-additional-benchmarks.test.mjs  correlation-matrix-benchmark-utils.mjs  cr2-decompress-probe.mjs  dump-fullres-rgb.mjs  effort-sweep-benchmark.mjs  enc-subtimer-probe.mjs  encode-golden-baseline.json  encode-golden-baseline.mjs  encode-option-sweep.mjs  fractal-butter-curves.html  fractal-scale-curves.mjs  generate-perceptual-manifest.mjs  graph-browser-launcher.mjs  graph-browser-launcher.test.mjs  hardware-telemetry.mjs  hunt-benchmark-bugs-v2.mjs  hunt-benchmark-bugs.mjs  jpeg-progressive-stream.mjs  jpeg-progressive-stream.test.js  justdecode.mjs  lightbox-snap-probe.mjs  metrics-flipflop.mjs  metrics-micro-bench.mjs  node-cdp-check.mjs  optimal-settings-timing-toon.test.mjs  optimal-settings-timing-utils.mjs  p3-features-benchmark.mjs  package-lock.json  (+64 more)
bun-chrome-BwwgLC/: Local State
crates/raw-pipeline/: Cargo.toml
crates/raw-pipeline/bench-wasm/: Cargo.toml  run.mjs
crates/raw-pipeline/bench-wasm/src/: lib.rs
crates/raw-pipeline/docs/outputs/timing tests/: cr2-flipflop-2026-06-30T20-03-50Z.toon  cr2-flipflop-2026-06-30T20-05-33Z.toon  cr2-flipflop-2026-06-30T20-35-12Z.toon  cr2-flipflop-2026-06-30T22-09-04Z.toon  cr2-flipflop-2026-06-30T22-12-04Z.toon  cr2-flipflop-2026-06-30T22-15-14Z.toon  cr2-flipflop-2026-06-30T22-16-36Z.toon
crates/raw-pipeline/examples/: acs_effort_bench.rs  alpha_scan_membench.rs  alpha_stepby_flip.rs  blur_cache_tile_flip.rs  blur_mul_add_flip.rs  box_downscale_hoist_flip.rs  box_downscale_rgb_parity_flip.rs  casabio_encode_flip.rs  comparer-bench.rs  cr2_baseline.rs  cr2_bench.rs  cr2_demosaic_realfile_flip.rs  cr2_finalize_membench.rs  cr2_fulldecode_flip.rs  cr2_ljpeg_probe.rs  cr2_reassembly_flip.rs  cr2_render_probe.rs  cr2_slice_scan.rs  demosaic-bench.rs  demosaic_bilinear_flip.rs  demosaic_preview_demo.rs  dng_decode_scaling.rs  dng_mhc_interior_flip.rs  dng_tiles_direct_flip.rs  dng_unpack_flip.rs  downscale_general_flip.rs  downscale_reciprocal_flip.rs  downscale_reciprocal_flip_RESULTS.md  downscale_snap_flip.rs  encode_internal_flip.rs  encoder_ab_ffi.rs  encoder_ab_rd.rs  encoder_ab_sz.rs  flip_native.rs  frame_stats_flipflop.rs  jxl_dec_attr_bench.rs  jxl_dec_group_bench.rs  jxl_dec_stats_runner.rs  jxl_dec_transforms_bench.rs  jxl_decode_file.rs  (+45 more)
crates/raw-pipeline/src/: casabio_encode.rs  cr2.rs  decompress.rs  demosaic.rs  dng.rs  exif.rs  frame_stats.rs  image_formats.rs  jxl_casadecoder.rs  jxl_casaencoder.rs  jxl_encode.rs  jxl_lowlevel.rs  lib.rs  ljpeg.rs  pipeline.rs  stream_preview.rs  tiff.rs  tone_simd.rs
crates/raw-pipeline/src/perceptual/: blur.rs  butteraugli.rs  engine.rs  mod.rs  psnr.rs  reference_ffi.rs  ssim.rs  telemetry.rs  xyb.rs
crates/raw-pipeline/src/perceptual/simd/: avx2.rs  avx512.rs  mod.rs  scalar.rs  wasm.rs
crates/raw-pipeline/tests/: cross_encoder.rs  image_formats_roundtrip.rs  jxl_lowlevel_progressive.rs  stream_peak_mem.rs
crates/raw-pipeline/tests/fixtures/: mandelbrot_f32.exr  mandelbrot_u16.tiff  mandelbrot_u8.tiff
docs/: 0 Agent Instructions to Lens Investigating INTEGRATED.txt  0 Agent implementation rules.md  0 Architecture Optimization.md  0 ChatGPT Lens II - Focus on Pipeline.md  0 Core Hot Files.md  0 Main encoding and decoding files.txt  0 Optimised Optimisation questions 29 June.md  1 Implementation Blueprint.md  1 ML Agent Deployment Brief.md  1 rejected optimizations.md  2026-06-20-jxl-decoder-sink-api-rfc.md  Agent Instructions to Lens Investigating.txt  ApplyToneMathPipeline-DONE.md  Architecture Optimization.md  BENCHMARK_AND_TESTING_HANDOFF - DONE.md  Build errors.txt  Butteraugli-findings.md  Butteraugli-implementation-handoff.md  CR2 Response 1.md  CR2 Response 2.md  CR2 Timings Handoff.md  CR2-Optimization-DONE.md  CasaWASM_JXL_Feature_Completeness_and_Gaps.md  ChatGPT Lens Handoff.md  CheckpointLockShardHashBackends-DONE.md  CliMigrateValidateTelemetryTtyRm-DONE.md  Commands to setup investigation of files.md  Cr2Rgb16RawDecodeBlurBenches-DONE.md  Decode Handoff.md  DecodeHandler-DONE.md  DecodeSession-lens-review.md  DecodeSessionEventStream - DONE.md  DecompressDemosaicDngExifLjpeg-DONE.md  DemosaicSimdFlipFlop-DONE.md  DemosaicSimdPlanarShuffleStore-Handoff-DONE.md  DemosaicSimdPlanarShuffleStore-Handoff.md  EncDecMemoryBottleneck.md  EncodePipelineCrossencoder - DONE.md  EncodehandlerFacadeEncodestart - DONE.md  EncodesessionTypesEncodeSessiontest - DONE.md  (+171 more)
fix_log/: 003-T03.md  003-T04.md  003-T05.md  005-concurrency-1.md  (+133 more)
(+1208 files in other folders)
