[package]
name = "raw-converter-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# A2: enable rayon parallelism in the RAW pipeline for WASM (requires COOP/COEP, already required by libjxl MT)
parallel-wasm = ["raw-pipeline/parallel", "dep:wasm-bindgen-rayon"]

# Forwarders so that `cargo run --bin raw_decode_bench --features jxl-lowlevel` (and/or jxl-encode)
# pulls the optional pieces into the raw-pipeline dep (whose declaration hardcodes default-features=false).
# Use when building the native bench or other native tools that want the shared low-level decoder model.
jxl-encode = ["raw-pipeline/jxl-encode"]
jxl-lowlevel = ["raw-pipeline/jxl-lowlevel"]
c-perceptual = ["raw-pipeline/c-perceptual"]

# Native rayon forwarder (no wasm-bindgen-rayon). The native bench builds
# raw-pipeline with default-features=false, which silently dropped `parallel` —
# so the tone pass (process / process_rgba / process_16bit) ran the single-threaded
# scalar branch. Measurement showed tone as the dominant cost (~600-790ms/24MP)
# precisely because of this. rayon par_chunks is per-pixel deterministic =>
# byte-identical output. Use for representative native numbers.
parallel = ["raw-pipeline/parallel"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance", "WorkerGlobalScope"] }
raw-pipeline = { path = "crates/raw-pipeline", default-features = false }
wasm-bindgen-rayon = { version = "1", optional = true }

# Native-only: JXL encode+decode for raw_decode_bench. Excluded from WASM builds
# via target guard (wasm-pack only builds the [lib] cdylib, not [[bin]] targets,
# but the guard prevents any accidental wasm32 compilation of vendored libjxl).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jpegxl-rs = { version = "0.14", features = ["vendored"] }
# Low-level libjxl for native progressive (FRAME_PROGRESSION / FlushImage / SetProgressiveDetail)
# and ROI crop (JxlDecoderSetCropEnabled + SetImageOutBuffer) in parity harness / Tauri paths.
jpegxl-sys = { version = "0.12.1", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
