[package]
name = "raw-converter-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# A2: enable rayon parallelism in the RAW pipeline for WASM (requires COOP/COEP, already required by libjxl MT)
parallel-wasm = ["raw-pipeline/parallel", "dep:wasm-bindgen-rayon"]

# Native bench/tools: forward the BSD own-FFI JXL codec (encode + decode).
# (Always enabled natively via the target dep below; this forwarder keeps the
# `--features jxl-codec` invocation valid.)
jxl-codec = ["raw-pipeline/jxl-codec"]
c-perceptual = ["raw-pipeline/c-perceptual"]

# Native rayon forwarder (no wasm-bindgen-rayon). The native bench builds
# raw-pipeline with default-features=false, which silently dropped `parallel` —
# so the tone pass (process / process_rgba / process_16bit) ran the single-threaded
# scalar branch. Measurement showed tone as the dominant cost (~600-790ms/24MP)
# precisely because of this. rayon par_chunks is per-pixel deterministic =>
# byte-identical output. Use for representative native numbers.
parallel = ["raw-pipeline/parallel", "dep:rayon"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance", "WorkerGlobalScope"] }
raw-pipeline = { path = "crates/raw-pipeline", default-features = false, features = ["image-formats"] }
wasm-bindgen-rayon = { version = "1", optional = true }
rayon = { version = "1", optional = true }

# Native-only: BSD own-FFI JXL codec (encode + decode). rayon (parallel) is now
# gated by the `parallel` feature at the root level, so it can be tested with/without.
# WASM builds use the [dependencies] entry above (default-features = false, no JXL).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
raw-pipeline = { path = "crates/raw-pipeline", default-features = false, features = ["jxl-codec", "image-formats"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
