[package]
name = "raw-pipeline"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel", "jxl-codec"]
parallel = ["dep:rayon"]
# jxl-codec: BSD-clean own-FFI JXL encode + decode (jxl-ffi crate). Native only.
# Replaces the GPL jpegxl-rs / jpegxl-sys path entirely (encode + decode).
jxl-codec = ["dep:jxl-ffi", "dep:half", "dep:rayon"]
c-perceptual = []
# image-formats: general RGB image ingestion (TIFF/EXR decoders in image_formats.rs).
# Decoders ride the `image` crate already in deps; gate kept explicit.
image-formats = []

[dependencies]
serde = { version = "1", features = ["derive"] }
rayon = { version = "1", optional = true }
# avif dropped: image's avif decode pulls a C dav1d dep that won't cross-compile to
# wasm; AVIF is handled browser-native. exr added (pure-Rust) for the f32 HDR path.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp", "exr"] }
thiserror = "1"
anyhow = "1"

# BSD-clean own FFI (bindgen over external/libjxl headers). Native only — WASM
# builds keep default-features = false and the JXL path stays on web/pkg + bridge.cpp.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jxl-ffi = { path = "../jxl-ffi", optional = true }
half = { version = "2", optional = true }

[dev-dependencies]
jxl-oxide = "0.11"
